[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/cave_mainLev.png" type="Texture" id=1]
[ext_resource path="res://Assets/Cave_walls.png" type="Texture" id=2]
[ext_resource path="res://Assets/ore_sets/cobblestone/cobblestone_gemstone_large.png" type="Texture" id=3]
[ext_resource path="res://World/Cave/CaveGen.gd" type="Script" id=4]
[ext_resource path="res://World/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Objects/OreObjectLarge.tscn" type="PackedScene" id=6]

[sub_resource type="TileSet" id=1]
0/name = "cave_mainLev.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 640, 448, 320, 224 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 4, Vector2( 0, 2 ), 432, Vector2( 0, 3 ), 438, Vector2( 0, 4 ), 438, Vector2( 0, 5 ), 438, Vector2( 0, 6 ), 54, Vector2( 1, 0 ), 64, Vector2( 1, 1 ), 1, Vector2( 1, 2 ), 504, Vector2( 1, 3 ), 511, Vector2( 1, 4 ), 511, Vector2( 1, 5 ), 511, Vector2( 1, 6 ), 63, Vector2( 2, 0 ), 334, Vector2( 2, 1 ), 397, Vector2( 2, 2 ), 504, Vector2( 2, 3 ), 511, Vector2( 2, 4 ), 511, Vector2( 2, 5 ), 511, Vector2( 2, 6 ), 63, Vector2( 3, 0 ), 355, Vector2( 3, 1 ), 229, Vector2( 3, 2 ), 504, Vector2( 3, 3 ), 511, Vector2( 3, 4 ), 511, Vector2( 3, 5 ), 511, Vector2( 3, 6 ), 63, Vector2( 4, 0 ), 245, Vector2( 4, 1 ), 371, Vector2( 4, 2 ), 216, Vector2( 4, 3 ), 219, Vector2( 4, 4 ), 219, Vector2( 4, 5 ), 219, Vector2( 4, 6 ), 27, Vector2( 5, 0 ), 413, Vector2( 5, 1 ), 350, Vector2( 5, 2 ), 255, Vector2( 5, 3 ), 219, Vector2( 5, 4 ), 219, Vector2( 5, 5 ), 219, Vector2( 5, 6 ), 507, Vector2( 6, 0 ), 325, Vector2( 6, 1 ), 325, Vector2( 6, 2 ), 63, Vector2( 6, 6 ), 504, Vector2( 7, 0 ), 325, Vector2( 7, 1 ), 325, Vector2( 7, 2 ), 63, Vector2( 7, 6 ), 504, Vector2( 8, 0 ), 325, Vector2( 8, 1 ), 325, Vector2( 8, 2 ), 63, Vector2( 8, 6 ), 504, Vector2( 9, 0 ), 325, Vector2( 9, 1 ), 325, Vector2( 9, 2 ), 447, Vector2( 9, 3 ), 438, Vector2( 9, 4 ), 438, Vector2( 9, 5 ), 438, Vector2( 9, 6 ), 510 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "cave_walls_2.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 768, 496 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 255, Vector2( 0, 4 ), 475, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 63, Vector2( 1, 4 ), 448, Vector2( 2, 0 ), 504, Vector2( 2, 1 ), 511, Vector2( 2, 2 ), 63, Vector2( 2, 3 ), 63, Vector2( 2, 4 ), 448, Vector2( 3, 0 ), 504, Vector2( 3, 1 ), 511, Vector2( 3, 2 ), 63, Vector2( 3, 3 ), 63, Vector2( 3, 4 ), 448, Vector2( 4, 0 ), 504, Vector2( 4, 1 ), 511, Vector2( 4, 2 ), 63, Vector2( 4, 3 ), 63, Vector2( 4, 4 ), 448, Vector2( 5, 0 ), 216, Vector2( 5, 1 ), 219, Vector2( 5, 2 ), 27, Vector2( 5, 3 ), 447, Vector2( 5, 4 ), 502, Vector2( 7, 0 ), 144, Vector2( 7, 1 ), 146, Vector2( 7, 2 ), 18, Vector2( 9, 0 ), 176, Vector2( 9, 1 ), 178, Vector2( 9, 2 ), 178, Vector2( 9, 3 ), 50, Vector2( 10, 0 ), 184, Vector2( 10, 1 ), 186, Vector2( 10, 2 ), 186, Vector2( 10, 3 ), 58, Vector2( 11, 0 ), 184, Vector2( 11, 1 ), 186, Vector2( 11, 2 ), 186, Vector2( 11, 3 ), 58, Vector2( 12, 0 ), 184, Vector2( 12, 1 ), 186, Vector2( 12, 2 ), 186, Vector2( 12, 3 ), 58, Vector2( 13, 0 ), 152, Vector2( 13, 1 ), 154, Vector2( 13, 2 ), 154, Vector2( 13, 3 ), 26, Vector2( 15, 0 ), 48, Vector2( 15, 3 ), 16, Vector2( 16, 0 ), 56, Vector2( 17, 0 ), 56, Vector2( 18, 0 ), 24, Vector2( 20, 2 ), 48, Vector2( 21, 2 ), 24 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 96 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "cave_mainLev.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1024, 0, 192, 352 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 438, Vector2( 0, 3 ), 438, Vector2( 0, 4 ), 438, Vector2( 0, 5 ), 54, Vector2( 0, 6 ), 432, Vector2( 0, 7 ), 54, Vector2( 0, 8 ), 216, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 511, Vector2( 1, 3 ), 511, Vector2( 1, 4 ), 511, Vector2( 1, 5 ), 63, Vector2( 1, 6 ), 56, Vector2( 1, 7 ), 56, Vector2( 2, 0 ), 504, Vector2( 2, 1 ), 511, Vector2( 2, 2 ), 511, Vector2( 2, 3 ), 511, Vector2( 2, 4 ), 511, Vector2( 2, 5 ), 63, Vector2( 2, 6 ), 56, Vector2( 2, 7 ), 56, Vector2( 3, 0 ), 504, Vector2( 3, 1 ), 511, Vector2( 3, 2 ), 511, Vector2( 3, 3 ), 511, Vector2( 3, 4 ), 511, Vector2( 3, 5 ), 63, Vector2( 3, 6 ), 56, Vector2( 3, 7 ), 56, Vector2( 4, 0 ), 504, Vector2( 4, 1 ), 511, Vector2( 4, 2 ), 511, Vector2( 4, 3 ), 511, Vector2( 4, 4 ), 511, Vector2( 4, 5 ), 63, Vector2( 4, 6 ), 56, Vector2( 4, 7 ), 56, Vector2( 5, 0 ), 216, Vector2( 5, 1 ), 219, Vector2( 5, 2 ), 219, Vector2( 5, 3 ), 219, Vector2( 5, 4 ), 219, Vector2( 5, 5 ), 27, Vector2( 5, 6 ), 216, Vector2( 5, 7 ), 27, Vector2( 5, 8 ), 432 ]
0/autotile/icon_coordinate = Vector2( 2, 2 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "cobblestone_gemstone_large.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 16, 96, 80 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Cave" type="Node"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GrassGround" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
cell_tile_origin = 1
format = 1

[node name="DirtGround" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
cell_tile_origin = 1
format = 1

[node name="CaveWalls" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="CaveWallsGround" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1

[node name="Ores" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 0 )

[node name="BottomRight" parent="Player/Camera2D/Limits" index="0"]
position = Vector2( 4504, 3088 )

[node name="TopLeft" parent="Player/Camera2D/Limits" index="1"]
position = Vector2( -4066, -4327 )

[node name="OreObjectLarge" parent="." instance=ExtResource( 6 )]

[editable path="Player"]
